# centroid_detector

./: .gitignore  README.md
centroid_detector/: CMakeLists.txt  package.xml
centroid_detector/include/centroid_detector/: centroid_detector.h
centroid_detector/launch/: centroid_detector.launch
centroid_detector/src/: centroid_detector.cpp
centroid_detector_msgs/: CMakeLists.txt  package.xml
centroid_detector_msgs/action/: DetectCentroid.action
centroid_detector_msgs/srv/: DetectCentroid.srv
