<?xml version="1.0"?>
<package>
  <name>centroid_detector</name>
  <version>0.0.0</version>
  <description>The centroid detector package</description>

  <maintainer email="kdfrench@umich.edu">kdfrench</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>centroid_detector_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>centroid_detector_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_conversions</run_depend>
</package>
